--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,13 @@
 hs_err_pid*
 /abstractfactory/nbproject/private/
 /abstractfactory/build/
+
+
+## NETBEANS
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
