--- a/.gitignore
+++ b/.gitignore
@@ -26,10 +26,10 @@ hs_err_pid*
 
 
 ## NETBEANS
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-nbactions.xml
-nb-configuration.xml
+*nbproject/private/
+*build/
+*nbbuild/
+*dist/
+*nbdist/
+*nbactions.xml
+*nb-configuration.xml
